--- a/ui.html
+++ b/ui.html
@@ -1676,6 +1676,7 @@
 
         <label for="model">Model</label>
         <select id="model" onchange="onModelChange()">
+          <option value="z-image">Z-Image</option>
           <option value="z-image-turbo" selected>Z-Image Turbo</option>
           <option value="qwen-image-2512">Qwen Image 2512</option>
         </select>
@@ -2817,11 +2818,15 @@ Results:
         }
       } else {
         loraOptions.style.display = 'none';
-        // Set defaults for z-image-turbo
+        // Set defaults based on model
         if (model === 'z-image-turbo') {
           stepsInput.value = 9;
           cfgInput.value = 0.0;
           if (cfgValue) cfgValue.textContent = '0.0';
+        } else if (model === 'z-image') {
+          stepsInput.value = 30;
+          cfgInput.value = 4.0;
+          if (cfgValue) cfgValue.textContent = '4.0';
         }
       }
       saveSettings();
