--- a/ui-music.html
+++ b/ui-music.html
@@ -357,8 +357,8 @@
       <!-- Model Selection -->
       <label for="modelSelect">Model</label>
       <select id="modelSelect">
-        <option value="ace-step-fast">ACE-Step Fast (27 steps)</option>
-        <option value="ace-step-quality">ACE-Step Quality (60 steps)</option>
+        <option value="ace-step">ACE-Step 1.5 (20 steps)</option>
+        <option value="ace-step-quality">ACE-Step 1.5 Quality (40 steps)</option>
       </select>
 
       <!-- Caption / Tags -->
@@ -405,7 +405,7 @@
               <label>Duration (seconds)</label>
               <span class="slider-value" id="durationValue">30</span>
             </div>
-            <input type="range" id="duration" min="10" max="240" step="5" value="30">
+            <input type="range" id="duration" min="10" max="600" step="5" value="30">
           </div>
 
           <div class="row">
@@ -453,17 +453,17 @@
           <div class="slider-container">
             <div class="slider-header">
               <label>Inference Steps</label>
-              <span class="slider-value" id="stepsValue">27</span>
+              <span class="slider-value" id="stepsValue">20</span>
             </div>
-            <input type="range" id="inferenceSteps" min="1" max="100" step="1" value="27">
+            <input type="range" id="inferenceSteps" min="1" max="100" step="1" value="20">
           </div>
 
           <div class="slider-container">
             <div class="slider-header">
               <label>Guidance Scale</label>
-              <span class="slider-value" id="guidanceValue">15.0</span>
+              <span class="slider-value" id="guidanceValue">7.5</span>
             </div>
-            <input type="range" id="guidanceScale" min="0" max="50" step="0.5" value="15">
+            <input type="range" id="guidanceScale" min="0" max="50" step="0.5" value="7.5">
           </div>
 
           <div class="row">
@@ -602,10 +602,10 @@
     // ========================
     const BUILTIN_PROFILES = {
       'Quick Draft': {
-        model: 'ace-step-fast',
+        model: 'ace-step',
         duration: 30,
-        inferenceSteps: 27,
-        guidanceScale: 15.0,
+        inferenceSteps: 20,
+        guidanceScale: 7.5,
         batchSize: 1,
         audioFormat: 'wav',
         instrumental: false,
@@ -613,17 +613,17 @@
       'High Quality': {
         model: 'ace-step-quality',
         duration: 60,
-        inferenceSteps: 60,
-        guidanceScale: 15.0,
+        inferenceSteps: 40,
+        guidanceScale: 7.5,
         batchSize: 1,
         audioFormat: 'flac',
         instrumental: false,
       },
       'Long Track': {
-        model: 'ace-step-fast',
+        model: 'ace-step',
         duration: 180,
-        inferenceSteps: 27,
-        guidanceScale: 15.0,
+        inferenceSteps: 20,
+        guidanceScale: 7.5,
         batchSize: 1,
         audioFormat: 'wav',
         instrumental: false,
@@ -631,19 +631,19 @@
       'Instrumental Ambient': {
         model: 'ace-step-quality',
         duration: 60,
-        inferenceSteps: 60,
-        guidanceScale: 15.0,
+        inferenceSteps: 40,
+        guidanceScale: 7.5,
         batchSize: 1,
         audioFormat: 'flac',
         instrumental: true,
         caption: 'ambient, atmospheric pads, ethereal textures, reverb, spacious, dreamy, instrumental',
-        lyrics: '[instrumental]',
+        lyrics: '[Instrumental]',
       },
       'Vocal Pop': {
-        model: 'ace-step-fast',
+        model: 'ace-step',
         duration: 30,
-        inferenceSteps: 27,
-        guidanceScale: 15.0,
+        inferenceSteps: 20,
+        guidanceScale: 7.5,
         batchSize: 2,
         audioFormat: 'wav',
         instrumental: false,
@@ -672,13 +672,9 @@
       // Update steps default when model changes
       document.getElementById('modelSelect').addEventListener('change', (e) => {
         const isQuality = e.target.value === 'ace-step-quality';
-        const steps = isQuality ? 60 : 27;
+        const steps = isQuality ? 40 : 20;
         document.getElementById('inferenceSteps').value = steps;
         document.getElementById('stepsValue').textContent = steps;
-        // SFT benefits from higher guidance
-        const guidance = isSft ? 15 : 15;
-        document.getElementById('guidanceScale').value = guidance;
-        document.getElementById('guidanceValue').textContent = guidance;
       });
 
       // Load profiles
